--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,18 +8,18 @@ theme:
   logo: 'https://picsum.photos/200'
   favicon: 'https://picsum.photos/200'
   palette:
-    - scheme: slate
-      primary: 'indigo'
-      accent: 'indigo'
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
-    - scheme: default
-      primary: 'custom'
-      accent: 'custom'
+    - scheme: default # Light mode
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
+    - scheme: slate # Dark mode
+      primary: indigo
+      accent: blue
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   features:
     - navigation.tabs
     - navigation.top
@@ -44,15 +44,23 @@ plugins:
             show_source: yes
 
 markdown_extensions:
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - attr_list
   - md_in_html
   - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      generator: !!python/name:material.extensions.emoji.to_svg_path
+      options:
+        emoji_index: !!python/name:material.extensions.emoji.twemoji
+        generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.tabbed:
       alternate_style: true
   - admonition
+
+extra_javascript:
+  - https://unpkg.com/mermaid@latest/dist/mermaid.min.js
 
 nav:
   - Home: index.md
