--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ plugins:
           options:
             show_root_heading: yes
             show_source: yes
+  - mermaid2
 
 markdown_extensions:
   - pymdownx.superfences:
@@ -29,6 +30,8 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
   - admonition
+
+
 
 nav:
   - Home: index.md
