--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
           path: ~/.cache 
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs mkdocs-material mkdocstrings mkdocstrings-python pymdown-extensions
+      - run: pip install mkdocs mkdocs-material mkdocs-shadcn mkdocstrings mkdocstrings-python pymdown-extensions
       - run: mkdocs gh-deploy --force
